tests/fixtures/invalid/float_rshift_bytes.py
# Cannot right shift Float and Bytes
x: float = 1.0 >> b"hello"
